# nxt_motion_model

./: CMakeLists.txt  package.xml
ros/: nxt_motion_model.launch  nxt_motion_model.launch~
src/nxt_motion_model/: calibration.cpp  imageconverter.cpp  motioncapture.cpp  motioncapture.h
